# dip-fmm

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_p2p.cpp
docs/: math.md  roadmap.md
examples/: CMakeLists.txt  operator_convergence_demo.cpp  plot_uniform_tree.py  single_box_demo.cpp
include/cdfmm/: cdfmm.hpp  coefficients.hpp  laplace_derivatives.hpp  multi_index.hpp  operators.hpp  output_flags.hpp  taylor_jet.hpp  tree_node.hpp  uniform_tree.hpp  validation.hpp  vec3.hpp
python/: bindings.cpp
python_tests/: test_python_bindings.py  test_uniform_tree_python.py
src/: laplace_derivatives.cpp  operators.cpp  taylor_jet.cpp  uniform_tree.cpp  validation.cpp
tests/: CMakeLists.txt  test_laplace_derivatives.cpp  test_multi_index.cpp  test_multipole_accuracy.cpp  test_operator_consistency.cpp  test_output_flags.cpp  test_p2m_m2l_l2p.cpp  test_p2p.cpp  test_taylor_jet.cpp  test_uniform_tree.cpp
