[build-system]
requires = ["scikit-build-core>=0.8", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "cdfmm"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.args = ["-DCDFMM_BUILD_PYTHON=ON", "-DCDFMM_BUILD_TESTS=OFF", "-DCDFMM_BUILD_EXAMPLES=OFF"]
